--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<meta charset="UTF-8">
 	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 	<meta name="viewport" content="width=device-width">
-	<meta name="description" content="エム・フィールドはマルチデバイスに対応したWebサイト制作・Webシステム開発、モバイル系・金融系技術者のアウトソーシングで企業活動の発展をサポート致します。" />
-	<meta name="keywords" content="Web制作,コーポレートサイト制作,システム開発,アウトソーシング,人材派遣,HiTAP" />
+	<meta name="description" content="xxxx" />
+	<meta name="keywords" content="xxxxx" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>事業内容｜株式会社エム・フィールド</title>
+	<title>xxxxxxx</title>
 	<!-- webclipicon -->
 	<meta name="apple-mobile-web-app-title" content="タイトルが入ります">
 	<link rel="apple-touch-icon-precomposed" href="/img/webclipicon.png">
@@ -26,8 +26,8 @@
 	<!-- stylesheet media Print -->
 	<link rel="stylesheet" type="text/css" href="/css/basic_style_forPrint.css" media="print">
 	<!-- facebook ogp -->
-	<meta property="og:title" content="株式会社エム・フィールド" />
-	<meta property="og:description" content="エム・フィールドはマルチデバイスに対応したWeb制作、コーポレートサイト制作、システム開発、モバイル系・金融系技術者のアウトソーシングで企業活動の発展をサポート致します。" />
+	<meta property="og:title" content="xxxxxxxxx" />
+	<meta property="og:description" content="xxxxxxxx" />
 	<meta property="og:url" content="http://www.m-field.co.jp/" />
 	<!-- common JS -->
 	<script type="text/javascript" src="/js/jquery-1.9.1.min.js"></script>
@@ -44,7 +44,7 @@
 	<!-- header -->
 	<div id="header">
 		<div class="inner-frame">
-			<h1><a href="/"><img src="/img/logo.png" alt="株式会社エム・フィールド"></a></h1>
+			<h1><a href="/"><img src="/img/logo.png" alt="xxxxxxxxx"></a></h1>
 			<ul id="menunavigation">
 				<li><a href="/mfstyle/">MF STYLE</a></li>
 				<li><a href="/works/">実績紹介</a></li>
@@ -327,7 +327,7 @@
 		<div class="companybox-thought">
 			<div class="company-content">
 				<h2>私たちの想い</h2>
-				<p>エム・フィールドは、他ならぬ「人」によって創り上げられる組織であり、<br>
+				<p>xxxxxxxxは、他ならぬ「人」によって創り上げられる組織であり、<br>
 				関わる人が皆、それぞれ社会での価値創造を実現し、<br>
 				成長と幸せを分かち合える事を目指します。</p>
 			</div>
@@ -383,9 +383,9 @@
 		</ul>
 		<div class="wrapper-footer-top">
 			<dl>
-				<dt>株式会社エム・フィールド</dt>
+				<dt>xxxxxxxxxx</dt>
 				<dd>
-					東京都品川区東五反田2-7-18　SOWA五反田ビル 4F
+					xxxxxxxxxxxxxxxx
 					<a href="/profile/access.html"><img src="/img/icon_place.png" alt="MAP"></a>
 				</dd>
 			</dl>
@@ -409,7 +409,7 @@
 				<li><a href="/profile/security.html">情報セキュリティポリシー</a></li>
 			</ul>
 			<p>
-				<small>Copyright c m-field.,inc. All rights reserved.</small>
+				<small>Copyright c xxxxxx.,inc. All rights reserved.</small>
 			</p>
 		</div>
 	</div>
