--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 			</dl>
 			<ul>
 				<li>
-					<a href="https://www.facebook.com/mfield.inc" target="_blank"><img src="/img/icon_facebook.png" alt="株式会社エム・フィールド　Facebookページ"></a>
+					<a href="https://www.facebook.com/mfield.inc" target="_blank"><img src="/img/icon_facebook.png" alt="ｘｘｘｘｘｘｘｘｘｘ　Facebookページ"></a>
 				</li>
 				<li>
 					<div class="fb-like" data-href="http://www.m-field.co.jp/" data-send="false" data-layout="button_count" data-width="450" data-show-faces="true"></div>
