--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<div class="inner-frame">
 			<h1><a href="/"><img src="/img/logo.png" alt="xxxxxxxxx"></a></h1>
 			<ul id="menunavigation">
-				<li><a href="/mfstyle/">MF STYLE</a></li>
+				<li><a href="/xxxxx/">xxxxx</a></li>
 				<li><a href="/works/">実績紹介</a></li>
 				<li class="active"><a href="/service/">事業内容</a></li>
 				<li><a href="/profile/">企業情報</a></li>
@@ -66,7 +66,7 @@
 			<div id="menunavigation_inner">
 				<ul class="list-menunavigation-sp-1st clearfix">
 					<li>
-						<a href="/mfbook/">MF BOOK</a>
+						<a href="/xxxxxx/">xxxxxx</a>
 					</li>
 					<li>
 						<a href="/works/">実績紹介</a>
@@ -117,7 +117,7 @@
 		<div class="section leftup sec01">
 			<div class="wrap-contentbox">
 				<div class="pannel-left">
-					<img src="/img/mfstyle/mv.png" alt="MF STYLE">
+					<img src="/img/mfstyle/mv.png" alt="">
 				</div>
 				<div class="pannel-right">
 					<dl>
